# FanController

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
assets/: index.html
examples/: nvml_probe.rs
packaging/: fancontroller-daemon.service  fancontroller.desktop
src/: gpu_nvml.rs  ipc.rs  main.rs
src/hardware/: controller.rs  linux.rs  mod.rs  nvapi.rs  types.rs  windows.rs
